--- a/assets/css/tail-out.css
+++ b/assets/css/tail-out.css
@@ -1026,10 +1026,6 @@ video {
   overflow: visible;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
-}
-
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -1286,6 +1282,16 @@ video {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.bg-image-blue-fixed {
+  background: url("/img/800/maptexture2.webp"),
+    linear-gradient(var(--gray-950), var(--gray-900));
+  background-blend-mode: overlay;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .bg-wooden-divider {
